--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,4 +1,4 @@
-$bottom-nav-height: 96px; // 62px bar + 16px bottom inset + some breathing room
+$bottom-nav-height: 62px; // bar height (flush to bottom, no gap)
 
 .layout {
   display: flex;
